set version 0.4.0, updated README